# FindMePls

./: Cargo.toml  README.md  build.rs  db.sqlite  run.sh  storage.json
proto/: collection_types.proto  find_me_pls.proto  types.proto
src/: business.rs  document_search.rs  error.rs  files.rs  grpc_service.rs  main.rs  routes.rs  types.rs  util.rs
