[package]
name = "find_me_pls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.18"
axum-macros = "0.3.7"
image = "0.24.6"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = "0.4.1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
probly-search = "2.0.0-alpha-2"
distance = "0.4.0"
base64 = "0.21.2"
doc_search = { git = "https://github.com/S4ndf1re/doc_find" }
futures = "0.3.28"
tonic = "0.9"
prost = "0.11.0"

[build-dependencies]
tonic-build = "0.9"
